# ComfyUI-Qwen

./: Qwen2.py  README.md  __init__.py  pyproject.toml
QWEN2 WORKFLOWS/: QWen2.5 + Flux.1 Dev Story【Zho】.json  Qwen2 + CosXL【Zho】.json  Qwen2 Chat【Zho】.json
